Mon Mar  2 15:42:13 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * orbsvcs/tests/ImplRepo/Bug_2604_Regression/Messenger_i.cpp:
        * orbsvcs/tests/ImplRepo/Bug_2604_Regression/run_test.pl:
        * orbsvcs/tests/ImplRepo/nestea_client_i.cpp:

          Fixed memory leaks local to these tests.

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:

          Fixed a memory leak in ImR_Locator_i::find(). imr_info was
          allocated in that function and immediately overwritten by
          new allocation.

Mon Mar  2 15:09:21 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
        * tao/GIOP_Message_Base.h:
        * tao/ZIOP/ZIOP.cpp:
        * tao/ZIOP/ZIOP.h:
        * tao/ZIOP_Adapter.h:
          Changed decompress interface to handle incoming
          and outgoing message blocks and errors better.

        * tests/ZIOP/client.cpp:
          Tempory blocked some tests.

Mon Mar  2 14:54:21 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Xt_Stopwatch/Stopwatch_display.cpp:
          Fixed compile warning and run-time error on 64-bit systems.

Mon Mar  2 12:57:14 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * orbsvcs/tests/InterfaceRepo/Bug_3155_Regression/test_idl.cpp:
        * orbsvcs/tests/InterfaceRepo/Bug_2962_Regression/client.cpp:

          Fixed local memory leaks in these tests.

Mon Mar  2 11:42:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added 3597

Mon Mar  2 11:10:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/AMH_Oneway/run_test.pl:
          Fixed typo in this file

Mon Mar  2 11:08:42 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_3575_Regression/test.cpp:
        * tests/Bug_3575_Regression/run_test.pl:
        * tests/Bug_3575_Regression/README:
        * tests/Bug_3575_Regression/Bug_3575_Regression.mpc:
        * bin/tao_orb_tests.lst:
